--- a/dein.toml
+++ b/dein.toml
@@ -5,9 +5,42 @@ repo = 'Shougo/dein.vim'
 repo = 'Shougo/neosnippet-snippets'
 
 [[plugins]]
-repo = 'rakr/vim-one'
+repo = 'joshdick/onedark.vim'
+
+[[plugins]]
+repo = 'neomake/neomake'
 hook_add = '''
-  let g:airline_theme='one'
-  set background=dark
-  colorscheme one
+autocmd! BufWritePost * Neomake
+'''
+
+
+#-----------------------------------
+# powerline
+#-----------------------------------
+#[[plugins]]
+#repo = 'itchyny/lightline.vim'
+[[plugins]]
+repo = 'majutsushi/tagbar'
+
+[[plugins]]
+repo = 'tpope/vim-fugitive'
+
+[[plugins]]
+repo = 'vim-airline/vim-airline'
+depends = ['tagbar', 'vim-fugitive']
+hook_add = '''
+source ~/.config/nvim/plugins/airline.rc.vim
+'''
+
+[[plugins]]
+repo = 'vim-airline/vim-airline-themes'
+depends = 'vim-airline'
+hook_add = '''
+let g:airline_theme = 'onedark'
+'''
+
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
+hook_add = '''
+  let g:deoplete#enable_at_startup = 1
 '''
