--- a/dein.toml
+++ b/dein.toml
@@ -5,18 +5,28 @@ repo = 'Shougo/dein.vim'
 # linter
 #--------------------------------
 [[plugins]]
-repo = 'neomake/neomake'
+repo = 'w0rp/ale'
 if = "has('nvim')"
 hook_add = '''
-source ~/.config/nvim/plugins/neomake.rc.vim
+source ~/.config/nvim/plugins/ale.rc.vim
 '''
 
+#[[plugins]]
+#repo = 'neomake/neomake'
+#if = "has('nvim')"
+#hook_add = '''
+#source ~/.config/nvim/plugins/neomake.rc.vim
+#'''
+
+#[[plugins]]
+#repo = 'vim-syntastic/syntastic'
+#if = "!has('nvim')"
+#hook_add = '''
+#source ~/.config/nvim/plugins/syntastic.rc.vim
+#'''
+
 [[plugins]]
-repo = 'vim-syntastic/syntastic'
-if = "!has('nvim')"
-hook_add = '''
-source ~/.config/nvim/plugins/syntastic.rc.vim
-'''
+repo = 'Shougo/neosnippet-snippets'
 
 #--------------------------------
 # terminal
@@ -28,6 +38,12 @@ if = "!has('nvim')"
 hook_add = '''
 source ~/.config/nvim/plugins/vimshell.rc.vim
 '''
+
+#[[plugins]]
+#repo = 'ludovicchabant/vim-gutentags'
+#hook_source = '''
+#let g:gutentags_enables=1
+#'''
 
 [[plugins]]
 repo = 'majutsushi/tagbar'
@@ -44,6 +60,7 @@ depends = ['tagbar', 'vim-fugitive']
 hook_add = '''
 let g:airline_powerline_fonts = 1
 let g:airline#extensions#tabline#enabled = 1
+let g:airline#extensions#ale#enabled = 1
 '''
 #hook_source = '''
 #source ~/.config/nvim/plugins/airline.rc.vim
